commit translated contents

--- a/articles/service-fabric/toc.yml
+++ b/articles/service-fabric/toc.yml
@@ -127,7 +127,7 @@
       href: service-fabric-content-roadmap.md
     - name: アプリケーションのシナリオ
       href: service-fabric-application-scenarios.md
-    - name: アーキテクチャ
+    - name: Architecture
       href: service-fabric-architecture.md
     - name: セキュリティ
       items:
@@ -192,7 +192,7 @@
           items:
             - name: Reliable Actors の概要
               href: service-fabric-reliable-actors-introduction.md
-            - name: アーキテクチャ
+            - name: Architecture
               href: service-fabric-reliable-actors-platform.md
             - name: サービスレベルの機能の実装
               href: service-fabric-reliable-actors-using.md
@@ -321,7 +321,7 @@
           items:
             - name: Cluster Resource Manager の概要
               href: service-fabric-cluster-resource-manager-introduction.md
-            - name: アーキテクチャ
+            - name: Architecture
               href: service-fabric-cluster-resource-manager-architecture.md
             - name: クラスターについて説明する
               href: service-fabric-cluster-resource-manager-cluster-description.md
@@ -635,7 +635,7 @@
             - name: Azure Pipelines を使用した継続的インテグレーションの設定
               href: ./service-fabric-tutorial-deploy-app-with-cicd-vsts.md
             - name: Jenkins を使用した Linux アプリケーションのデプロイ
-              href: service-fabric-cicd-your-linux-applications-with-jenkins.md
+              href: /azure/developer/jenkins/deploy-to-service-fabric-cluster
     - name: リバース プロキシの設定と構成
       items:
         - name: リバース プロキシの設定と構成
