--- a/articles/data-lake-store/TOC.yml
+++ b/articles/data-lake-store/TOC.yml
@@ -33,7 +33,7 @@
       items:
         - name: Azure Data Factory の使用
           href: ../data-factory/load-azure-data-lake-store.md
-        - name: ストレージ エクスプローラーの使用
+        - name: Storage Explorer の使用
           href: data-lake-store-in-storage-explorer.md
         - name: AdlCopy を使用
           href: data-lake-store-copy-data-azure-storage-blob.md
