--- a/articles/cost-management-billing/toc.yml
+++ b/articles/cost-management-billing/toc.yml
@@ -94,7 +94,7 @@
               href: reservations/understand-reserved-instance-usage.md?toc=/azure/cost-management-billing/toc.json
             - name: 企業顧客の利用状況データ
               href: reservations/understand-reserved-instance-usage-ea.md?toc=/azure/cost-management-billing/toc.json
-        - name: 課金に関する用語
+        - name: 課金
           items:
             - name: 個々のサブスクリプションの使用状況に関する用語
               href: understand/understand-usage.md
@@ -108,6 +108,8 @@
               href: manage/mca-understand-pricesheet.md
             - name: Microsoft Partner Agreement の請求書の用語
               href: understand/mpa-invoice-terms.md
+            - name: 更新された個々の課金アカウントに対する変更
+              href: understand/mosp-new-customer-experience.md
             - name: Microsoft 顧客契約の請求先アカウント
               href: understand/mca-overview.md
             - name: Microsoft パートナー契約の課金アカウント
