--- a/articles/network-watcher/toc.yml
+++ b/articles/network-watcher/toc.yml
@@ -7,6 +7,8 @@
 - name: クイックスタート
   expanded: true
   items:
+    - name: ARM テンプレートを使用して NSG フロー ログを構成する
+      href: quickstart-configure-network-security-group-flow-logs-from-arm-template.md
     - name: VM トラフィック フィルターに関する問題を診断する - ポータル
       href: diagnose-vm-network-traffic-filtering-problem.md
     - name: VM トラフィック フィルターに関する問題を診断する - PowerShell
