--- a/articles/openshift/toc.yml
+++ b/articles/openshift/toc.yml
@@ -28,6 +28,12 @@
           href: configure-azure-ad-cli.md
         - name: Azure Active Directory 認証を構成する (ポータル)
           href: configure-azure-ad-ui.md
+    - name: Velero を使用してアプリケーションのバックアップと復元を作成する
+      items:
+        - name: Velero を使用してクラスター アプリケーションのバックアップを作成する
+          href: howto-create-a-backup.md
+        - name: Velero を使用してクラスター アプリケーションの復元を作成する
+          href: howto-create-a-restore.md
     - name: Azure Red Hat OpenShift 4 の監視とログ記録
       items:
         - name: Azure Red Hat OpenShift 4 における Azure Monitor for containers (プレビュー)
