--- a/articles/virtual-machines/workloads/oracle/toc.yml
+++ b/articles/virtual-machines/workloads/oracle/toc.yml
@@ -4,7 +4,7 @@
       href: oracle-overview.md
     - name: Azure VM 上のソリューション
       href: oracle-vm-solutions.md
-    - name: WebLogic Server Azure アプリケーション
+    - name: Azure の Oracle WebLogic Server とは
       href: oracle-weblogic.md
     - name: OCI を使用したソリューション
       href: oracle-oci-overview.md
