--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -85,6 +85,10 @@
           items:
             - name: リソースの作成
               href: samples/resource-manager-app-resource.md
+            - name: Azure App Service
+              href: samples/resource-manager-web-app.md
+            - name: Azure Functions
+              href: samples/resource-manager-function-app.md
         - name: 診断設定
           href: samples/resource-manager-diagnostic-settings.md
         - name: Log Analytics ワークスペース
