--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -167,7 +167,7 @@
       href: concepts-pipeline-execution-triggers.md
     - name: 統合ランタイム
       href: concepts-integration-runtime.md
-    - name: セキュリティ
+    - name: Security
       items:
         - name: セキュリティ ベースライン
           href: security-baseline.md
@@ -570,7 +570,7 @@
           href: control-flow-system-variables.md
         - name: マッピング データ フローをパラメーター化する
           href: parameters-data-flow.md
-    - name: セキュリティ
+    - name: Security
       items:
         - name: データ移動のセキュリティに関する考慮事項
           href: data-movement-security-considerations.md
@@ -620,6 +620,8 @@
           href: create-shared-self-hosted-integration-runtime-powershell.md
         - name: セルフホステッド統合ランタイムのオートメーション スクリプト
           href: self-hosted-integration-runtime-automation-scripts.md
+        - name: Windows コンテナーでセルフホステッド統合ランタイムを実行する
+          href: how-to-run-self-hosted-integration-runtime-in-windows-container.md
     - name: Azure での SSIS パッケージの実行
       items:
         - name: SSDT からの Azure での SSIS パッケージの実行
