--- a/articles/governance/blueprints/index.yml
+++ b/articles/governance/blueprints/index.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Landing
 title: Azure Blueprints のドキュメント
-summary: Azure Resource Manager テンプレート、ロールベースのアクセス制御、ポリシーなどの成果物を単一のブループリント定義にパッケージ化して、デプロイを簡略化しましょう。
+summary: Azure Resource Manager テンプレート、Azure ロールベースのアクセス制御 (Azure RBAC)、ポリシーなどの成果物を単一のブループリント定義にパッケージ化して、デプロイを簡略化しましょう。
 metadata:
   title: Azure Blueprints のドキュメント
-  description: Azure Resource Manager テンプレート、ロールベースのアクセス制御、ポリシーなどの成果物を単一のブループリント定義にパッケージ化して、デプロイを簡略化しましょう。
+  description: Azure Resource Manager テンプレート、Azure ロールベースのアクセス制御 (Azure RBAC)、ポリシーなどの成果物を単一のブループリント定義にパッケージ化して、デプロイを簡略化しましょう。
   ms.service: blueprints
   ms.topic: landing-page
   ms.collection: collection
   author: DCtheGeek
   ms.author: dacoulte
   ms.date: 06/29/2020
-  ms.openlocfilehash: 04c99d2428bd3c92187ce9383f51d38a9729d22a
-  ms.sourcegitcommit: f684589322633f1a0fafb627a03498b148b0d521
-  ms.translationtype: 
+  ms.openlocfilehash: a0b800e12143cce428f0e5fcd26d9f9c0b690ee0
+  ms.sourcegitcommit: 98854e3bd1ab04ce42816cae1892ed0caeedf461
+  ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 07/06/2020
-  ms.locfileid: "85969381"
+  ms.lasthandoff: 08/07/2020
+  ms.locfileid: "88009547"
 landingContent:
 - title: Azure Blueprints について
   linkLists:
