--- a/articles/iot-central/core/TOC.yml
+++ b/articles/iot-central/core/TOC.yml
@@ -59,7 +59,7 @@
           href: 'https://docs.microsoft.com/learn/modules/manage-iot-central-apps-with-rest-api/'
 - name: 概念
   items:
-    - name: アーキテクチャ
+    - name: Architecture
       href: concepts-architecture.md
     - name: アプリケーション テンプレートとは
       href: concepts-app-templates.md
@@ -105,8 +105,10 @@
           href: howto-run-a-job.md
     - name: 変換
       items:
-        - name: Azure で宛先にデータをエクスポートする
+        - name: Azure で宛先にデータをエクスポートする (レガシ)
           href: howto-export-data.md
+        - name: クラウドの宛先にデータをエクスポートする (プレビュー)
+          href: howto-use-data-export.md
         - name: 規則に基づいて Webhook を作成する
           href: howto-create-webhooks.md
         - name: ワークフローを使用して他のサービスと統合する
