--- a/articles/load-balancer/TOC.yml
+++ b/articles/load-balancer/TOC.yml
@@ -12,10 +12,10 @@
   items:
     - name: パブリック ロード バランサ―の作成 - ポータル
       href: quickstart-load-balancer-standard-public-portal.md
+    - name: パブリック ロード バランサーの作成 - PowerShell
+      href: quickstart-create-standard-load-balancer-powershell.md
     - name: パブリック ロード バランサ―の作成 - Azure CLI
       href: quickstart-load-balancer-standard-public-cli.md
-    - name: パブリック ロード バランサ―の作成 - Azure PowerShell
-      href: quickstart-create-standard-load-balancer-powershell.md
     - name: パブリック ロード バランサ―の作成 - Resource Manager テンプレート
       href: quickstart-load-balancer-standard-public-template.md
     - name: 内部ロード バランサ―の作成 - Azure PowerShell
