--- a/articles/iot-central/index.yml
+++ b/articles/iot-central/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: philmea
   ms.author: philmea
   ms.date: 10/25/2019
-  ms.openlocfilehash: 4b77c2d724a8540c0e43c45690877367a4b72416
-  ms.sourcegitcommit: 46f8457ccb224eb000799ec81ed5b3ea93a6f06f
+  ms.openlocfilehash: 92e2269c0ef0a6b0e8f0f0676ef76359dffe83dd
+  ms.sourcegitcommit: bfeae16fa5db56c1ec1fe75e0597d8194522b396
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "87337026"
+  ms.lasthandoff: 08/10/2020
+  ms.locfileid: "88034823"
 highlightedContent:
   items:
   - title: IoT Central とは
@@ -68,9 +68,9 @@ conceptualContent:
     - url: ./core/tutorial-create-telemetry-rules.md
       itemType: how-to-guide
       text: テレメトリ ルールを作成する
-    - url: ./core/howto-export-data.md
+    - url: ./core/howto-use-data-export.md
       itemType: how-to-guide
-      text: Azure で宛先にデータをエクスポートする
+      text: クラウドの宛先にデータをエクスポートする - プレビュー
     footerLink:
       url: ./core/index.yml
       text: 詳細情報
