--- a/articles/active-directory/fundamentals/toc.yml
+++ b/articles/active-directory/fundamentals/toc.yml
@@ -49,6 +49,8 @@
       items:
         - name: Azure AD のアーキテクチャ
           href: active-directory-architecture.md
+        - name: すべてのアプリを Azure AD と統合する
+          href: five-steps-to-full-application-integration-with-azure-ad.md
     - name: デプロイ ガイド
       items:
         - name: デプロイ 30、90、およびそれ以降
