--- a/articles/active-directory/hybrid/TOC.yml
+++ b/articles/active-directory/hybrid/TOC.yml
@@ -374,3 +374,5 @@
       href: reference-connect-msexchuserholdpolicies.md
     - name: Azure AD Connect 1.4.xx.x デバイスの消失について
       href: reference-connect-device-disappearance.md
+    - name: Azure AD Connect のバージョン履歴アーカイブ
+      href: reference-connect-version-history-archive.md
