--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -18,7 +18,7 @@
       items:
         - name: Visual Studio Code
           href: ./functions-create-first-function-vs-code.md
-        - name: Visual Studio
+        - name: "Visual\_Studio"
           href: functions-create-your-first-function-visual-studio.md
         - name: コマンド ライン
           href: functions-create-first-azure-function-azure-cli.md
@@ -29,7 +29,7 @@
       items:
         - name: Visual Studio Code
           href: functions-add-output-binding-storage-queue-vs-code.md
-        - name: Visual Studio
+        - name: "Visual\_Studio"
           href: functions-add-output-binding-storage-queue-vs.md
         - name: コマンド ライン
           href: functions-add-output-binding-storage-queue-cli.md
@@ -103,6 +103,7 @@
           href: functions-bindings-example.md
         - name: バインディング拡張機能を登録する
           href: functions-bindings-register.md
+          displayName: 'bundles, extension bundles'
         - name: バインディングの式のパターン
           href: functions-bindings-expressions-patterns.md
         - name: バインディングの戻り値の利用
@@ -272,8 +273,6 @@
           displayName: 'app setting, application setting'
         - name: ランタイム バージョンの設定
           href: set-runtime-version.md
-        - name: 手動による拡張機能の登録
-          href: install-update-binding-extensions-manual.md
         - name: 関数の無効化
           href: disable-function.md
         - name: geo ディザスター リカバリー
