--- a/articles/load-balancer/TOC.yml
+++ b/articles/load-balancer/TOC.yml
@@ -128,6 +128,8 @@
           href: move-across-regions-internal-load-balancer-portal.md
         - name: 内部ロード バランサー - PowerShell
           href: move-across-regions-internal-load-balancer-powershell.md
+    - name: 送信専用のロード バランサーの構成
+      href: egress-only.md
 - name: トラブルシューティング
   items:
     - name: Azure Load Balancer のトラブルシューティング
