--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -5,7 +5,6 @@
     - name: 仮想マシンについて
       href: overview.md
 - name: クイックスタート
-  expanded: true
   items:
     - name: VM の作成 - Azure CLI
       href: quick-create-cli.md
@@ -16,6 +15,7 @@
     - name: VM の作成 - Resource Manager テンプレート
       displayName: 'Resource Manager, template, json'
       href: quick-create-template.md
+  expanded: true
 - name: チュートリアル
   items:
     - name: 1 - VM の作成/管理
@@ -294,8 +294,8 @@
             - name: VM インスタンス サイズの柔軟性
               href: reserved-vm-instance-size-flexibility.md
         - name: スポット VM
-          href: spot-vms.md
           displayName: 'pre-empt, preempt'
+          href: spot-vms.md
         - name: 一時ディスクを使用しない Azure VM
           href: ../azure-vms-no-temp-disk.md
         - name: Azure VM のサイズの名前付け規則
@@ -371,14 +371,14 @@
       href: states-lifecycle.md
     - name: 監視
       href: ../../azure-monitor/insights/monitor-vm-azure.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
+    - name: ブート診断
+      href: ../../virtual-machines/boot-diagnostics.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
     - name: バックアップと回復
       href: ../backup-recovery.md
     - name: クラウド導入フレームワーク
       href: /azure/cloud-adoption-framework/get-started/
     - name: アーキテクチャ センター
       href: /azure/architecture/
-    - name: インフラストラクチャのガイドライン
-      href: infrastructure-example.md
 - name: 操作方法ガイド
   items:
     - name: VM の作成
@@ -405,8 +405,8 @@
             - name: ポータル
               href: ../windows/spot-portal.md?toc=/azure/virtual-machines/linux/toc.json
             - name: ARM テンプレート
-              href: spot-template.md
               displayName: Azure Resource Manager
+              href: spot-template.md
             - name: エラー コード
               href: ../error-codes-spot.md?toc=/azure/virtual-machines/linux/toc.json
     - name: クラシックから Azure Resource Manager に移行する
@@ -550,8 +550,8 @@
             - name: Azure CLI の使用
               href: image-builder.md
             - name: Resource Manager テンプレート リファレンス
-              href: image-builder-json.md
               displayName: 'ARM,Resource Manager'
+              href: image-builder-json.md
             - name: イメージ ギャラリー用のビルド
               href: image-builder-gallery.md
             - name: 既存のイメージの更新
@@ -585,9 +585,9 @@
                 - name: CLI
                   href: ../../bastion/create-host-cli.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
             - name: Bastion を使用して接続する
+              href: ../../bastion/bastion-connect-vm-ssh.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
               items:
                 - name: Bastion SSH 接続
-              href: ../../bastion/bastion-connect-vm-ssh.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
             - name: Bastion RDP 接続
               href: ../../bastion/bastion-connect-vm-rdp.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
         - name: Encrypt
@@ -749,12 +749,12 @@
                 - name: 概要
                   href: ../../azure-monitor/platform/diagnostics-extension-overview.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
                 - name: Linux Diagnostics 拡張機能
-                  displayname: diagnostics extension
                   items:
                     - name: 概要
                       href: ../../azure-monitor/../virtual-machines/extensions/diagnostics-linux.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json?toc=/azure/azure-monitor/toc.json
                     - name: Telegraf を使用したメトリックの収集
                       href: ../../azure-monitor/platform/collect-custom-metrics-linux-telegraf.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
+                  displayname: diagnostics extension
             - name: Log Analytics エージェント
               items:
                 - name: 概要
@@ -788,11 +788,11 @@
             - name: トラブルシューティング
               items:
                 - name: Log Analytics VM 拡張機能
-                  displayname: 'troubleshoot, troubleshooting'
                   href: ../../azure-monitor/platform/vmext-troubleshoot.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
-                - name: Log Analytics Linux エージェント
                   displayname: 'troubleshoot, troubleshooting'
+                - name: Log Analytics Linux エージェント
                   href: ../../azure-monitor/platform/agent-linux-troubleshoot.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
+                  displayname: 'troubleshoot, troubleshooting'
         - name: VM に対する Azure Monitor
           items:
             - name: 概要
@@ -1134,8 +1134,8 @@
     - name: REST
       href: /rest/api/compute
     - name: Resource Manager テンプレート
-      href: /azure/templates/microsoft.compute/allversions
       displayName: ARM
+      href: /azure/templates/microsoft.compute/allversions
 - name: リソース
   items:
     - name: Q & A
