--- a/articles/virtual-machines/windows/toc.yml
+++ b/articles/virtual-machines/windows/toc.yml
@@ -5,7 +5,6 @@
     - name: 仮想マシンについて
       href: overview.md
 - name: クイックスタート
-  expanded: true
   items:
     - name: VM の作成 - ポータル
       href: quick-create-portal.md
@@ -16,6 +15,7 @@
     - name: VM の作成 - Resource Manager テンプレート
       displayName: 'Resource Manager, template, json'
       href: quick-create-template.md
+  expanded: true
 - name: チュートリアル
   items:
     - name: 1 - VM の作成/管理
@@ -37,8 +37,8 @@
     - name: 9 - 仮想マシンのバックアップ
       href: tutorial-backup-vms.md
     - name: 10 - VM の管理
-      href: tutorial-govern-resources.md
       displayName: scope policy RBAC lock tag
+      href: tutorial-govern-resources.md
     - name: 11 - VM の追跡と更新
       href: tutorial-config-management.md
     - name: 12 - VM の監視
@@ -279,15 +279,15 @@
             - name: VM インスタンス サイズの柔軟性
               href: reserved-vm-instance-size-flexibility.md
         - name: スポット VM
-          href: spot-vms.md
           displayName: 'pre-empt, preempt'
+          href: spot-vms.md
         - name: 一時ディスクを使用しない Azure VM
           href: ../azure-vms-no-temp-disk.md
         - name: Azure VM のサイズの名前付け規則
           href: ../vm-naming-conventions.md
         - name: 旧世代
-          href: ../sizes-previous-gen.md?toc=/azure/virtual-machines/windows/toc.json&bc=/azure/virtual-machines/windows/breadcrumb/toc.json
           displayName: D-series Ds-series A-series Basic
+          href: ../sizes-previous-gen.md?toc=/azure/virtual-machines/windows/toc.json&bc=/azure/virtual-machines/windows/breadcrumb/toc.json
         - name: Isolated のサイズ
           href: ../isolation.md
         - name: Azure コンピューティング ユニット (ACU)
@@ -355,14 +355,14 @@
       href: states-lifecycle.md
     - name: 監視
       href: ../../azure-monitor/insights/monitor-vm-azure.md?toc=/azure/virtual-machines/windows/toc.json&bc=/azure/virtual-machines/windows/breadcrumb/toc.json
+    - name: ブート診断
+      href: ../../virtual-machines/boot-diagnostics.md?toc=/azure/virtual-machines/windows/toc.json&bc=/azure/virtual-machines/windows/breadcrumb/toc.json
     - name: バックアップと回復
       href: ../backup-recovery.md
     - name: クラウド導入フレームワーク
       href: /azure/cloud-adoption-framework/get-started/?toc=/azure/virtual-machines/windows/toc.json&bc=/azure/virtual-machines/windows/breadcrumb/toc.json
     - name: アーキテクチャ センター
       href: /azure/architecture/
-    - name: インフラストラクチャの例
-      href: infrastructure-example.md
 - name: 操作方法ガイド
   items:
     - name: VM の作成
@@ -554,9 +554,9 @@
                 - name: CLI
                   href: ../../bastion/create-host-cli.md?toc=/azure/virtual-machines/windows/toc.json&bc=/azure/virtual-machines/windows/breadcrumb/toc.json
             - name: Bastion を使用して接続する
+              href: ../../bastion/bastion-connect-vm-ssh.md?toc=/azure/virtual-machines/windows/toc.json&bc=/azure/virtual-machines/windows/breadcrumb/toc.json
               items:
                 - name: Bastion SSH 接続
-              href: ../../bastion/bastion-connect-vm-ssh.md?toc=/azure/virtual-machines/windows/toc.json&bc=/azure/virtual-machines/windows/breadcrumb/toc.json
             - name: Bastion RDP 接続
               href: ../../bastion/bastion-connect-vm-rdp.md?toc=/azure/virtual-machines/windows/toc.json&bc=/azure/virtual-machines/windows/breadcrumb/toc.json
         - name: Encrypt
@@ -747,11 +747,11 @@
             - name: トラブルシューティング
               items:
                 - name: Log Analytics VM 拡張機能
-                  displayname: 'troubleshoot, troubleshooting'
                   href: ../../azure-monitor/platform/vmext-troubleshoot.md?toc=/azure/virtual-machines/windows/toc.json&bc=/azure/virtual-machines/windows/breadcrumb/toc.json
-                - name: Log Analytics Windows エージェント
                   displayname: 'troubleshoot, troubleshooting'
+                - name: Log Analytics Windows エージェント
                   href: ../../azure-monitor/platform/agent-windows-troubleshoot.md?toc=/azure/virtual-machines/windows/toc.json&bc=/azure/virtual-machines/windows/breadcrumb/toc.json
+                  displayname: 'troubleshoot, troubleshooting'
         - name: VM に対する Azure Monitor
           items:
             - name: 概要
