--- a/articles/active-directory/develop/TOC.yml
+++ b/articles/active-directory/develop/TOC.yml
@@ -468,13 +468,13 @@
     - name: 自動ユーザー プロビジョニング (SCIM)
       items:
         - name: 自動ユーザー プロビジョニングとは
-          href: /azure/active-directory/app-provisioning/user-provisioning
+          href: ../app-provisioning/user-provisioning.md
         - name: SCIM エンドポイントの開発と統合
-          href: /azure/active-directory/app-provisioning/use-scim-to-provision-users-and-groups
+          href: ../app-provisioning/use-scim-to-provision-users-and-groups.md
         - name: 一般的なプロビジョニングのシナリオ
-          href: /azure/active-directory/app-provisioning/scim-graph-scenarios
+          href: ../app-provisioning/scim-graph-scenarios.md
         - name: MS Graph を使用した構成の自動化
-          href: /azure/active-directory/app-provisioning/application-provisioning-configure-api
+          href: ../app-provisioning/application-provisioning-configure-api.md
     - name: Azure portal のヘルプ記事
       items:
         - name: 独自に開発したアプリケーションのトークン有効期間の既定値
@@ -630,7 +630,7 @@
         - name: Azure AD アプリ ギャラリーに公開する
           href: v2-howto-app-gallery-listing.md
         - name: Office 365 販売者ダッシュボードに公開する
-          href: 'https://docs.microsoft.com/office/dev/store/use-the-seller-dashboard-to-submit-to-the-office-store'
+          href: /office/dev/store/use-the-seller-dashboard-to-submit-to-the-office-store
 - name: リファレンス
   items:
     - name: アプリケーション マニフェスト
@@ -642,7 +642,7 @@
       displayName: 'MSAL, auth library, SDK'
       href: reference-v2-libraries.md
     - name: Microsoft Graph の ID およびアクセスに関する API
-      href: 'https://docs.microsoft.com/graph/api/resources/azure-ad-overview'
+      href: /graph/api/resources/azure-ad-overview
     - name: 認証と承認エラー コード
       displayName: AADSTS
       href: reference-aadsts-error-codes.md
@@ -663,7 +663,7 @@
     - name: '"Microsoft アカウントでのサインイン" を試してみる'
       href: 'https://azure.microsoft.com/develop/identity/signin/'
     - name: Azure リソースのマネージド ID
-      href: 'https://docs.microsoft.com/azure/active-directory/managed-service-identity/overview'
+      href: ../managed-identities-azure-resources/overview.md
     - name: ヘルプの表示
       displayName: 'support, help options'
       href: developer-support-help-options.md
