--- a/articles/docker/index.yml
+++ b/articles/docker/index.yml
@@ -10,32 +10,32 @@ metadata:
   author: georgewallace
   ms.author: gwallace
   ms.date: 03/08/2020
-  ms.openlocfilehash: daff334cbbe118d6fdbc42a5497313f9671fd7f1
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.openlocfilehash: 9205a47ee0ba3e6e0b328c8f481b15fe593ec5fb
+  ms.sourcegitcommit: 2ffa5bae1545c660d6f3b62f31c4efa69c1e957f
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 03/25/2020
-  ms.locfileid: "78944022"
+  ms.lasthandoff: 08/11/2020
+  ms.locfileid: "88080387"
 landingContent:
 - title: Docker on Azure のデプロイ
   linkLists:
   - linkListType: overview
     links:
-    - text: Ubuntu 上に Docker をデプロイするクイックスタート テンプレート
+    - text: Ubuntu 上に Docker をデプロイするクイック スタート テンプレート
       url: https://azure.microsoft.com/resources/templates/docker-simple-on-ubuntu/
-- title: はじめに
+- title: 作業開始
   linkLists:
   - linkListType: tutorial
     links:
     - text: Azure App Service で PostgreSQL を使用して Python (Django) Web アプリを実行する
-      url: ../app-service/containers/tutorial-python-postgresql-app.md
+      url: ../app-service/tutorial-python-postgresql-app.md
     - text: Jenkins、GitHub、および Docker を使用して、Azure 内の Linux VM に開発インフラストラクチャを作成する
       url: ../jenkins/tutorial-jenkins-github-docker-cicd.md
 - title: リソース
   linkLists:
   - linkListType: reference
     links:
-    - text: Docker の Azure サイト
+    - text: Docker for Azure サイト
       url: https://docs.docker.com/docker-for-azure/why/
     - text: Docker の Azure ドライバー
       url: https://docs.docker.com/machine/drivers/azure/
