--- a/articles/network-watcher/toc.yml
+++ b/articles/network-watcher/toc.yml
@@ -49,6 +49,8 @@
       items:
         - name: セキュリティ ベースライン
           href: security-baseline.md
+    - name: データの保存場所
+      href: data-residency.md
 - name: 操作方法ガイド
   items:
     - name: Network Watcher を構成する
